--- a/css/style.css
+++ b/css/style.css
@@ -1626,6 +1626,13 @@ h1, h2, h3, h4, h5, h6, figure {
   opacity: 0;
 }
 
+
+.modal-header{
+  text-align: center;
+}
+.modal-content{
+  padding: 30px;
+}
 /*# sourceMappingURL=style.css.map */
 
 
