--- a/css/style.css
+++ b/css/style.css
@@ -494,7 +494,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 #fh5co-explore,
 #fh5co-pricing,
-#fh5co-testimonial,
+#about,
 #fh5co-started,
 #fh5co-project,
 #fh5co-blog,
@@ -506,7 +506,7 @@ h1, h2, h3, h4, h5, h6, figure {
 @media screen and (max-width: 768px) {
   #fh5co-explore,
   #fh5co-pricing,
-  #fh5co-testimonial,
+  #about,
   #fh5co-started,
   #fh5co-project,
   #fh5co-blog,
@@ -795,34 +795,34 @@ h1, h2, h3, h4, h5, h6, figure {
   letter-spacing: 2px;
 }
 
-#fh5co-testimonial {
+#about {
   background: #efefef;
 }
-#fh5co-testimonial .testimony-slide {
+#about .testimony-slide {
   text-align: center;
 }
-#fh5co-testimonial .testimony-slide span {
+#about .testimony-slide span {
   font-size: 12px;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 700;
   display: block;
 }
-#fh5co-testimonial .testimony-slide figure {
+#about .testimony-slide figure {
   margin-bottom: 10px;
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
   *display: inline;
 }
-#fh5co-testimonial .testimony-slide figure img {
+#about .testimony-slide figure img {
   width: 200px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   border-radius: 50%;
 }
-#fh5co-testimonial .testimony-slide blockquote {
+#about .testimony-slide blockquote {
   border: none;
   margin: 30px auto;
   width: 70%;
@@ -830,21 +830,21 @@ h1, h2, h3, h4, h5, h6, figure {
   padding: 0;
 }
 @media screen and (max-width: 992px) {
-  #fh5co-testimonial .testimony-slide blockquote {
+  #about .testimony-slide blockquote {
     width: 100%;
   }
 }
-#fh5co-testimonial .arrow-thumb {
+#about .arrow-thumb {
   position: absolute;
   top: 40%;
   display: block;
   width: 100%;
 }
-#fh5co-testimonial .arrow-thumb a {
+#about .arrow-thumb a {
   font-size: 32px;
   color: #dadada;
 }
-#fh5co-testimonial .arrow-thumb a:hover, #fh5co-testimonial .arrow-thumb a:focus, #fh5co-testimonial .arrow-thumb a:active {
+#about .arrow-thumb a:hover, #about .arrow-thumb a:focus, #about .arrow-thumb a:active {
   text-decoration: none;
 }
 
